<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/Perfil"
        android:layout_width="98dp"
        android:layout_height="85dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="100dp"
        android:onClick="perfil"
        android:text="@string/perfil"
        android:textColor="@color/blancotexto"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/blancotexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="383dp"
        android:layout_height="537dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/borde_constraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/Boleta"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:onClick="bol"
            android:text="@string/boleta"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/Agregar_Aparato"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Agregar_Aparato"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="15dp"
            android:onClick="aga"
            android:text="@string/Aparato"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/Editar_eliminar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Boleta" />

        <Button
            android:id="@+id/Editar_eliminar"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:onClick="editelim"
            android:text="@string/editelim"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/Historial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Agregar_Aparato" />

        <Button
            android:id="@+id/Gastos"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:text="@string/vergastos"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/Salir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/Historial"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:onClick="his"
            android:text="@string/historial"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Editar_eliminar" />

        <Button
            android:id="@+id/button7"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="15dp"
            android:onClick="cantus"
            android:text="@string/Cantus"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/Gastos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Historial" />

        <Button
            android:id="@+id/Salir"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="13dp"
            android:onClick="Sal"
            android:text="@string/salir"
            android:textColor="@color/blancotexto"
            android:textColorLink="@color/verdeprima"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Gastos" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>