<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Editar_Eliminar">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="114dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="150dp"
        android:text="@string/editelim"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/blancotexto"
        app:layout_constraintBottom_toTopOf="@+id/aparato_item_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aparato_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/borde_constraint"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/textViewNombreAparato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/verdecuadro"
            android:fontFamily="sans-serif"
            android:text="@string/nombre_aparato"
            android:textColor="@color/blancotexto"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCantidadUtiliza"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/verdecuadro"
            android:text="@string/cantidad_usada"
            android:textColor="@color/blancotexto"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/textViewTipoEnergia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNombreAparato" />

        <TextView
            android:id="@+id/textViewTipoEnergia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/verdecuadro"
            android:text="@string/tipo_energia"
            android:textColor="@color/blancotexto"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCantidadUtiliza" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aparato_item_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
