<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ver_perfil">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutVerPerfil"
        android:layout_width="413dp"
        android:layout_height="492dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Caja"
            android:layout_width="376dp"
            android:layout_height="272dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/borde_constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="100dp"
            android:text="@string/perfil"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/blancotexto"
            app:layout_constraintBottom_toTopOf="@+id/NomUs"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/NomUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="176dp"
            android:background="@color/verdecuadro"
            android:text="@string/nombre_usuario_con_formato"
            android:textColor="@color/blancotexto"
            android:textColorLink="@color/blancotexto"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:background="@color/verdecuadro"
            android:text="@string/correo_con_formato"
            android:textColor="@color/blancotexto"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/NomUs" />

        <Button
            android:id="@+id/Editar_perfil"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="92dp"
            android:text="@string/EditarP"
            android:textColor="@color/blancotexto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Email1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayoutEditarPerfil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
